			   XPCE ChangeLog
			   ==============

* ADDED: library(scaledbitmap) providing class scaled_bitmap.

* FIXED: Bug#104: PceEmacs find-file `Browse' to use Open rather than Save
  (actually not good, but MS-Windows cannot browse for Open or Save file at
  the same time).  Holger Kanwischer.


VERSION 6.2.10, distributed with SWI-Prolog 5.2.10
==================================================

* FIXED: Bug#102: focus handling problems in combo box.  Holger Kanwischer.

* ADDED: library(pce_grapher) to support creating and managing simple Prolog
  graphs.  Especially useful for educational purposes.

* ADDED: extra argument to `graphical->layout' to extend existing graphs.
  (incremental layout).

* ADDED: library(pce_tagged_connection): allow ->tag: @nil to remove the
  associated tag.

* ADDED: `graphical <-connected' and use message passing in
  `graphical <-layout' to find out about connected graphicals.

* FIXED: Bug#103: Error loading XPCE on MS-Windows when compiled for single
  threading.  Holger Kanwischer.

* FIXED: Bug#101: @finder<-file using a specified default file (MS-Windows
  version).  Laurens van der Meij.


VERSION 6.2.9, distributed with SWI-Prolog 5.2.9
================================================

* ADDED: PceDraw: Alignment sub-menu for text objects

* FIXED: Frame area computation in MS-Windows to use AdjustWindowRectEx(). 
  Fixes layout problems in Windows XP.

* ADDED: in_pce_thread/1 to support the model of XPCE running in the foreground
  and make background threads interact synchronously with it.

* FIXED/MODIFIED: `node->image' now use ->destroy to destroy the old image.
  The new image is immediately connected to the tree so <-contained works.

* FIXED: `event->inside' for windows that are not the receiver of the event.

* PORT: manual installation according to the GNU make/autoconf guidelines.
  Andreas Voegele.

* MODIFIED: library(pce_unclip) to detach if the pointer leaves the original